[package]
name = "mb2-game-audio"
version = "0.3.0"
edition = "2024"

[dependencies]
critical-section-lock-mut = "0.1.2"
nrf52833-hal = "0.18.0"
embedded-hal = "1.0.0"

[dependencies.keytones]
version = "0.2"
git = "https://github.com/BartMassey/keytones"
default-features = false

[dependencies.rtt-target]
version = "0.6.1"
optional = true

[dev-dependencies]
cortex-m-rt = "0.7.5"
microbit-v2 = "0.15.1"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"

[dev-dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core", "inline-asm"]

[features]
trace = ["rtt-target"]
